--- a/src/app/components/home-step/home-step.component.html
+++ b/src/app/components/home-step/home-step.component.html
@@ -143,3 +143,7 @@
     </div>
 
 </div>
+
+<div class="dashboard-desktop">
+    <iframe title="Step dashboard completo" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNWI4YWQ1OTctNDBiNS00YmI2LWFhOGEtYjg0YWEwZmQyMzk5IiwidCI6ImNmNzJlMmJkLTdhMmItNDc4My1iZGViLTM5ZDU3YjA3Zjc2ZiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+</div>
